workspace = { members = ["minecraft-java-core"] }
[package]
name = "rustmine"
version = "0.1.0"
description = "Next generation open source Minecraft launcher"
authors = ["Tacx <12997062+tacxou@users.noreply.github.com>"]
license = "CC-BY-NC-SA"
repository = "https://github.com/tacxtv/rustmine.git"
default-run = "rustmine"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["api-all"] }
rustmine-launcher-core = { version = "0.1.0", path = "../../rustmine-launcher-core" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
