[package]
name = "minecraft-java-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
zip = "0.6.6"
sha1 = "0.10.6"
tempfile = { version = "3.10.1", features = [] }
uuid = { version = "1.7.0", features = ["v4"] }

[[bin]]
name = "minecraft-java-core"
path = "src/main.rs"
